@@ -1,3 +1,7 @@
+2007-08-27  Srinivasa Ragavan  <sragavan@novell.com>
+
+	* tnef-plugin.c: (e_plugin_lib_enable): Avoid reentrancy in enable.
+
 2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* org-gnome-tnef-attachments.eplug.xml:	Fixed bugs where the .so wasn't 
